--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,8 @@ android {
     buildTypes {
         debug {
             // 配置混淆
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //            signingConfig signingConfigs.release
         }
@@ -108,7 +108,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation 'zlc.season:rxdownload3:1.3.4'
+    //添加RxDownload4的所有依赖
+    implementation "com.github.ssseasonnn:RxDownload:1.0.9"
+
     implementation 'com.pacioianu.david:ink-page-indicator:1.3.0'
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.9'
     implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
@@ -116,6 +120,9 @@ dependencies {
     // https://mvnrepository.com/artifact/androidx.room/room-ktx
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // https://mvnrepository.com/artifact/com.tbruyelle.rxpermissions/rxpermissions
+    implementation "com.tbruyelle.rxpermissions:rxpermissions:0.9.4"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
